--- a/misc/index.html
+++ b/misc/index.html
@@ -19,6 +19,12 @@
   <body>
     <svg width="400" height="300" viewBox="0 0 400 300">
       <text x="40" y="80">Hello World</text>
+      <path
+        fill="none"
+        stroke="blue"
+        stroke-width="3"
+        d="M 28 152 C 28 152 49 78 100 67 C 151 56 210 164 255 148 C 300 133 295 59 295 59"
+      />
     </svg>
   </body>
 </html>
