--- a/misc/index.html
+++ b/misc/index.html
@@ -18,8 +18,13 @@
   </head>
   <body>
     <svg width="400" height="300" viewBox="0 0 400 300">
-      <text x="40" y="80">Hello World</text>
+      <text x="40" y="80">
+        <textPath href="#MyPath">
+          Hello World
+        </textPath>
+      </text>
       <path
+        id="MyPath"
         fill="none"
         stroke="blue"
         stroke-width="3"
